# Binomial-Tree-Option-Pricing-Model

./: .gitignore  Binomial_Trees_Homework.ipynb  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
benchmarks/: benchmark_binomial.py
src/option_pricing/: __init__.py  binomial.py
tests/: test_binomial.py
